fixed accidental reader horizontal scroll

--- a/public/modules/reader/reader.css
+++ b/public/modules/reader/reader.css
@@ -1,6 +1,6 @@
 #page-container {
     position: relative;
-    width: 100%;
+    width: 98%;
     height: 90%;
     margin: 0 16px;
 }
